# ARM_NEON

./: CMakeLists.txt  arm_build.txt  dump.json  neon_core.s  neon_lab
build-arm/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: benchmark.cpp  benchmark.hpp  cli_main.cpp  main.cpp  neon.cpp  neon.hpp  neon_core.cpp  neon_core.h  neon_wrapper.cpp  scalar.cpp  scalar.h  scalar.hpp
src/gui/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
